# exploring-l4-intelligence

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  README.md  README_CN.md
common/: README.md  pyproject.toml
common/src/speechrl_common/: __init__.py
common/src/speechrl_common/audio/: __init__.py  features.py  io.py
common/src/speechrl_common/configs/: base.yaml
common/src/speechrl_common/data/: __init__.py  registry.py
common/src/speechrl_common/eval/: __init__.py  probing.py
common/src/speechrl_common/models/: __init__.py  omni_embed.py  prompts.py  qwen2_audio.py
common/src/speechrl_common/rl/: __init__.py  decode.py  disentanglement.py  embedding_metrics.py  metrics.py  probe.py  reward.py
common/src/speechrl_common/tracking/: __init__.py  mlflow_logger.py
common/src/speechrl_common/utils/: __init__.py  checkpoint.py  logging.py  seed.py
common/tests/: test_embedding_metrics.py  test_eval_probing.py  test_rl_extras.py  test_smoke.py
docs/: architecture.md  data.md  datasets.lock.json  setup.md
proofs/tfrl/: .gitignore  TfrlProofs.lean  lakefile.toml
proofs/tfrl/TfrlProofs/: BestOfN.lean  MBR.lean  Plurality.lean  Regret.lean  Smoke.lean  Suppression.lean  (+1 more)
scripts/: env-setup.sh  mlflow-ui.sh  wiki-sync.sh  wsl-setup.sh
scripts/data/: README.md  fetch-data.sh  fetch-semantic-manual.sh  fetch-semantic-modelscope.sh  gen-lockfile.py  inventory.sh  probe-access.sh
wiki/: 2026-06-22-omni-embed-speech-disentanglement-1.1.1.md  2026-06-23-omni-embed-speech-disentanglement-1.2.1.md  2026-06-24-emotion-pooling-crema-d-operatorA-gain.md  2026-06-24-factor-suppression-crema-d-operatorA-control.md  2026-06-24-language-intent-minds14-operatorA-disentanglement.md  2026-06-24-tfrl-validation-run-log.md  2026-06-25-cross-team-synthesis-semantic-tasks-tfrl-feasibility.md  AI-Collaboration.md  Architecture.md  Data-and-Assets.md  Decision-Log.md  Environment-and-Setup.md  Home.md  Omni-Embed-Model-Dossier.md  Onboarding.md  Paralinguistic-Suppression-Survey.md  Per-Work-Status.md  Project-Thesis.md  README.md  Speech-Semantic-Task-Datasets.md  Validation-Experiment-Matrix.md  W4-Research-Plan.md  W4-Training-Free-RL-Feasibility.md  Working-Mode.md  _Footer.md  _Sidebar.md
(+5 files in other folders)
